完善垂直居中方法‘

--- a/垂直居中/margin.html
+++ b/垂直居中/margin.html
@@ -7,21 +7,19 @@
         .outer{
             width: 600px;
             height: 600px;
-
             background-color: #CD590C;
-
-            display: flex;
-            justify-content: center;
-
+            position: relative;
 
         }
         .inner{
             width: 100px;
             height: 100px;
-
             background-color: #1965b3;
-            align-self: center;
-
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-left: -50px;
+            margin-top: -50px;
 
         }
     </style>
