视频功能修改完成‘

--- a/视频推荐/index.html
+++ b/视频推荐/index.html
@@ -22,14 +22,17 @@
                 <img src="./img/tj.png" alt="">
                 重磅推荐
             </a>
-            <!-- <a href="#" class="active" title="三十而已：话题爽剧！姐姐飒气挑战">
-                <span>三十而已</span>
-                三十而已：话题爽剧！姐姐飒气挑战
-            </a>
-            <a href="#" class="list-nav" title="三十而已：话题爽剧！姐姐飒气挑战">
-                <span>三十而已</span>
-                三十而已：话题爽剧！姐姐飒气挑战
-            </a> -->
+            <div class="items">
+                <!--             <a href="#" class="active" title="三十而已：话题爽剧！姐姐飒气挑战">-->
+                <!--                <span>三十而已</span>-->
+                <!--                三十而已：话题爽剧！姐姐飒气挑战-->
+                <!--            </a>-->
+                <!--            <a href="#" class="list-nav" title="三十而已：话题爽剧！姐姐飒气挑战">-->
+                <!--                <span>三十而已</span>-->
+                <!--                三十而已：话题爽剧！姐姐飒气挑战-->
+                <!--            </a>-->
+            </div>
+
         </div>
     </div>
     <script src="./index.js"></script>
