--- a/水平垂直居中/margin2.html
+++ b/水平垂直居中/margin2.html
@@ -7,21 +7,21 @@
         .outer{
             width: 600px;
             height: 600px;
-
             background-color: #CD590C;
-
-            display: flex;
-            justify-content: center;
-
+            position: relative;
 
         }
         .inner{
             width: 100px;
             height: 100px;
-
             background-color: #1965b3;
-            align-self: center;
-
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+           
 
         }
     </style>
