--- a/数组方法/index.html
+++ b/数组方法/index.html
@@ -13,7 +13,9 @@
     const s="a=1223;b=555;c=666"
 
     const arr1=[1,2,3,4,5,6]
-
+    arr1.myForEach((item)=>{
+        console.log('item', item)
+    })
 
     const obj={
 
