--- a/testdemo/demo.html
+++ b/testdemo/demo.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<div class="aa">
+    <div class="on" style="width: 200px;height: 60px;background-color: aliceblue;"></div>
+</div>
+
 <body>
-    <li></li>
-    <div style="display: list-item;"></div>
     <script src="./demo.js"></script>
-    
+    <script>
+        var a = 1;
+        function b() {
+            console.log(a);  // fn
+            a = 10;
+            return;
+            function a() { }
+        }
+        b();
+        console.log(a); //1
+
+    </script>
+
 </body>
+
 </html>
