--- a/bootstrap/demo.html
+++ b/bootstrap/demo.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <style>
-        .row div{
+        .row div {
             background-color: lightcoral;
             border: 1px solid lightblue;
-            height: 100px;}
+            height: 100px;
+        }
     </style>
 </head>
+
 <body>
-<div class="container">
-    <!-- Content here -->
-    <figure class="figure">
-        <img src="http://www.qiannuobao.com/static/images/product/product2_img1.png" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption">A caption for the above image.</figcaption>
-    </figure>
-
-</div>
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-xl-4">≥1200px  固定宽度1140  小于1200px 就一行显示</div>
-        <div class="col-xl-4">≥1200px</div>
-        <div class="col-xl-4">≥1200px</div>
+    <div class="container">
+        <!-- Content here -->
+        <figure class="figure">
+            <img src="http://www.qiannuobao.com/static/images/product/product2_img1.png"
+                class="figure-img img-fluid rounded" alt="...">
+            <figcaption class="figure-caption">A caption for the above image.</figcaption>
+        </figure>
 
     </div>
-    <div class="row mt-5">
-        <div class="col-lg-4">≥992px 固定宽度960  小于992px 就一行显示</div>
-        <div class="col-lg-4">≥1200px</div>
-        <div class="col-lg-4">≥1200px</div>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-xl-4">≥1200px 固定宽度1140 小于1200px 就一行显示</div>
+            <div class="col-xl-4">≥1200px</div>
+            <div class="col-xl-4">≥1200px</div>
 
-    </div>
-    <div class="row mt-5">
-        <div class="col-md-4">≥768px  固定宽度720  小于768px 就一行显示</div>
-        <div class="col-md-4">≥1200px</div>
-        <div class="col-md-4">≥1200px</div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-lg-4">≥992px 固定宽度960 小于992px 就一行显示</div>
+            <div class="col-lg-4">≥1200px</div>
+            <div class="col-lg-4">≥1200px</div>
 
-    </div>
-    <div class="row mt-5">
-        <div class="col-sm-4">≥576px  固定宽度540 小于576px 就一行显示</div>
-        <div class="col-sm-4">≥1200px</div>
-        <div class="col-sm-4">≥1200px</div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-4">≥768px 固定宽度720 小于768px 就一行显示</div>
+            <div class="col-md-4">≥1200px</div>
+            <div class="col-md-4">≥1200px</div>
 
-    </div>
-    <div class="row mt-5">
-        <div class="col-4"><576px    设计几行就显示几行</div>
-        <div class="col-4"><576px</div>
-        <div class="col-4"><576px</div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-sm-4">≥576px 固定宽度540 小于576px 就一行显示</div>
+            <div class="col-sm-4">≥1200px</div>
+            <div class="col-sm-4">≥1200px</div>
 
-    </div>
-    <div class="row mt-5">
-        <div class="col"></div>
-        <div class="w-100" style="border: 0;height: auto"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-4">
+                <576px 设计几行就显示几行</div>
+                    <div class="col-4">
+                        <576px< /div>
+                            <div class="col-4">
+                                <576px< /div>
 
-    </div>
-</div>
+                            </div>
+                            <div class="row mt-5">
+                                <div class="col"></div>
+                                <div class="w-100" style="border: 0;height: auto"></div>
+                                <div class="col"></div>
+                                <div class="col"></div>
+
+                            </div>
+                    </div>
 
 </body>
+
 </html>
