--- a/testdemo/demo.html
+++ b/testdemo/demo.html
@@ -9,6 +9,7 @@
 </head>
 <div class="aa">
     <div class="on" style="width: 200px;height: 60px;background-color: aliceblue;"></div>
+    lorem
 </div>
 
 <body>
